--- a/UI/Register.ui
+++ b/UI/Register.ui
@@ -6,96 +6,177 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1192</width>
-    <height>670</height>
+    <width>1028</width>
+    <height>625</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="layoutDirection">
+   <enum>Qt::LayoutDirection::LeftToRight</enum>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-image: url(img/background.jpg);
+background-repeat: no-repeat;
+background-position: center;</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="widget" native="true">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>60</y>
-      <width>311</width>
-      <height>601</height>
+      <x>390</x>
+      <y>190</y>
+      <width>71</width>
+      <height>20</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">QWidget {
-    background-color: #000;
-    background-image: url('background.png'); /* Đặt hình nền của bạn */
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color: white;
-}
-</string>
+    <property name="text">
+     <string>Username</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="Email">
+   <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>310</y>
-      <width>113</width>
-      <height>28</height>
+      <x>390</x>
+      <y>260</y>
+      <width>63</width>
+      <height>20</height>
      </rect>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">/* Input fields */
-#inputField {
-    background-color: #333;
-    color: white;
-    border: 1px solid #444;
-    border-radius: 5px;
-    padding: 12px;
-    font-size: 16px;
-    margin-top: 10px;
-}</string>
-    </property>
-    <property name="inputMask">
-     <string>Email</string>
     </property>
     <property name="text">
      <string>Email</string>
     </property>
-    <property name="dragEnabled">
-     <bool>false</bool>
-    </property>
-    <property name="clearButtonEnabled">
-     <bool>false</bool>
-    </property>
    </widget>
-   <widget class="QLineEdit" name="password">
+   <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>390</y>
-      <width>113</width>
-      <height>28</height>
+      <x>390</x>
+      <y>330</y>
+      <width>63</width>
+      <height>20</height>
      </rect>
     </property>
-    <property name="inputMask">
-     <string notr="true"/>
+    <property name="text">
+     <string>Password</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>400</y>
+      <width>121</width>
+      <height>20</height>
+     </rect>
     </property>
     <property name="text">
-     <string notr="true"/>
+     <string>Confirm password</string>
     </property>
-    <property name="maxLength">
-     <number>32767</number>
+   </widget>
+   <widget class="QLineEdit" name="txt_name">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>220</y>
+      <width>231</width>
+      <height>31</height>
+     </rect>
     </property>
-    <property name="echoMode">
-     <enum>QLineEdit::EchoMode::Normal</enum>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid #e67e22;
+border-radius: 7px;
+padding: 5px;</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="txt_email">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>290</y>
+      <width>231</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid #e67e22;
+border-radius: 7px;
+padding: 5px;</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="txt_password">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>360</y>
+      <width>231</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid #e67e22;
+border-radius: 7px;
+padding: 5px;</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="cf_pw">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>430</y>
+      <width>231</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 2px solid #e67e22;
+border-radius: 7px;
+padding: 5px;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>490</y>
+      <width>83</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Create</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>540</y>
+      <width>121</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Have an account?</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>540</y>
+      <width>83</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Log in</string>
     </property>
    </widget>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
