--- a/ui/Login.ui
+++ b/ui/Login.ui
@@ -27,7 +27,7 @@
      <string>Username</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="user_2">
+   <widget class="QLineEdit" name="txt_email">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -56,7 +56,7 @@
      <string>Password</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="pw">
+   <widget class="QLineEdit" name="txt_email_2">
     <property name="geometry">
      <rect>
       <x>450</x>
@@ -67,6 +67,9 @@
     </property>
     <property name="text">
      <string>Enter password</string>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::EchoMode::PasswordEchoOnEdit</enum>
     </property>
    </widget>
    <widget class="QPushButton" name="login_bt">
