--- a/ui/Login.ui
+++ b/ui/Login.ui
@@ -29,7 +29,9 @@ background-position: center;</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background: rgba(0, 0, 0, .5) </string>
+     <string notr="true">background: rgba(0, 0, 0, .5);
+border-radius: 20px;
+</string>
     </property>
     <widget class="QLabel" name="label_2">
      <property name="geometry">
