--- a/ui/Login.ui
+++ b/ui/Login.ui
@@ -184,10 +184,10 @@ padding: 5px;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>30</y>
-      <width>301</width>
-      <height>81</height>
+      <x>40</x>
+      <y>60</y>
+      <width>291</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -212,6 +212,32 @@ padding: 5px;</string>
      <string>Netflix</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>-10</x>
+      <y>20</y>
+      <width>1221</width>
+      <height>681</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: rgba(0, 0, 0, .5);
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../img/background.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>label_6</zorder>
+   <zorder>widget</zorder>
+   <zorder>label_5</zorder>
   </widget>
  </widget>
  <resources/>
