--- a/UI/mainwindow.ui
+++ b/UI/mainwindow.ui
@@ -162,7 +162,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="page">
      <widget class="QLabel" name="label_5">
@@ -493,13 +493,13 @@
        <string notr="true">background: white;</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="btn_play">
       <property name="geometry">
        <rect>
-        <x>620</x>
-        <y>600</y>
-        <width>31</width>
-        <height>31</height>
+        <x>590</x>
+        <y>590</y>
+        <width>61</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="text">
@@ -514,7 +514,7 @@
      <zorder>horizontalSlider</zorder>
      <zorder>horizontalSlider_2</zorder>
      <zorder>widget</zorder>
-     <zorder>pushButton</zorder>
+     <zorder>btn_play</zorder>
     </widget>
    </widget>
    <widget class="QLabel" name="label_2">
