--- a/UI/mainwindow.ui
+++ b/UI/mainwindow.ui
@@ -48,7 +48,7 @@
      <string>Netflix</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_main">
+   <widget class="QPushButton" name="btn_nav_home">
     <property name="geometry">
      <rect>
       <x>290</x>
@@ -122,7 +122,7 @@
       <normaloff>../img/magnifying-glass-solid.svg</normaloff>../img/magnifying-glass-solid.svg</iconset>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_profile">
+   <widget class="QPushButton" name="btn_nav_profile">
     <property name="geometry">
      <rect>
       <x>1040</x>
@@ -152,11 +152,11 @@
      <string>Mới thêm</string>
     </property>
    </widget>
-   <widget class="QStackedWidget" name="stackedWidget">
+   <widget class="QStackedWidget" name="main_widget">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>40</y>
+      <x>10</x>
+      <y>60</y>
       <width>1211</width>
       <height>651</height>
      </rect>
@@ -164,7 +164,7 @@
     <property name="currentIndex">
      <number>2</number>
     </property>
-    <widget class="QWidget" name="page">
+    <widget class="QWidget" name="home">
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
@@ -357,8 +357,34 @@
        <bool>true</bool>
       </property>
      </widget>
+     <widget class="QPushButton" name="btn_nav_play">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>240</y>
+        <width>83</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Play</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_4">
+      <property name="geometry">
+       <rect>
+        <x>400</x>
+        <y>240</y>
+        <width>83</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Play</string>
+      </property>
+     </widget>
     </widget>
-    <widget class="QWidget" name="page_2">
+    <widget class="QWidget" name="detail">
      <widget class="QLabel" name="label_13">
       <property name="geometry">
        <rect>
@@ -415,11 +441,25 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Thời gian ra mắt: 14 tháng 04 năm 2017&lt;br/&gt;Thể loại : Hành động, phiêu lưu, tội phạm&lt;br/&gt;Độ dài: 136 phút&lt;br/&gt;Quốc gia: American&lt;br/&gt;Đạo diễn: F. Gary Gray&lt;br/&gt;Diễn viên chính: Vin Diesel, Jason Statham, Dwayne Johnson,...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="btn_watch">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>360</y>
+        <width>511</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Xem phim</string>
+      </property>
+     </widget>
      <zorder>label_15</zorder>
      <zorder>label_13</zorder>
      <zorder>label_14</zorder>
+     <zorder>btn_watch</zorder>
     </widget>
-    <widget class="QWidget" name="page_3">
+    <widget class="QWidget" name="watch">
      <widget class="QSlider" name="horizontalSlider">
       <property name="geometry">
        <rect>
@@ -510,42 +550,215 @@
         <normaloff>../img/play_btn.svg</normaloff>../img/play_btn.svg</iconset>
       </property>
      </widget>
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="geometry">
+       <rect>
+        <x>930</x>
+        <y>600</y>
+        <width>31</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../img/volume-high-solid.svg</normaloff>../img/volume-high-solid.svg</iconset>
+      </property>
+     </widget>
      <zorder>label_16</zorder>
      <zorder>horizontalSlider</zorder>
      <zorder>horizontalSlider_2</zorder>
      <zorder>widget</zorder>
      <zorder>btn_play</zorder>
+     <zorder>pushButton_2</zorder>
+    </widget>
+    <widget class="QWidget" name="profile">
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>40</y>
+        <width>141</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../img/user-regular.svg</normaloff>../img/user-regular.svg</iconset>
+      </property>
+     </widget>
+     <widget class="QWidget" name="widget_2" native="true">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>40</y>
+        <width>751</width>
+        <height>481</height>
+       </rect>
+      </property>
+      <widget class="QLabel" name="label_18">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>50</y>
+         <width>91</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Username</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="txt_name">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>100</y>
+         <width>601</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border-radius: 7px;
+padding: 5px;</string>
+       </property>
+       <property name="placeholderText">
+        <string>Username</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>200</y>
+         <width>601</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border-radius: 7px;
+padding: 5px;</string>
+       </property>
+       <property name="placeholderText">
+        <string>Email</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_3">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>300</y>
+         <width>601</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border-radius: 7px;
+padding: 5px;</string>
+       </property>
+       <property name="placeholderText">
+        <string>Telephone</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_17">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>160</y>
+         <width>51</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Email</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_19">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>260</y>
+         <width>91</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Telephone</string>
+       </property>
+      </widget>
+      <widget class="QDateEdit" name="dateEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>380</y>
+         <width>101</width>
+         <height>31</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_20">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>380</y>
+         <width>81</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Birthday</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>-70</x>
+        <y>-150</y>
+        <width>1581</width>
+        <height>941</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>../img/background.jpg</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <zorder>label_2</zorder>
+     <zorder>widget_2</zorder>
+     <zorder>pushButton</zorder>
     </widget>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>-10</y>
-      <width>1221</width>
-      <height>741</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>../img/images.jpg</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <zorder>label_2</zorder>
-   <zorder>label</zorder>
-   <zorder>btn_main</zorder>
-   <zorder>btn_mvseries</zorder>
-   <zorder>btn_mvies</zorder>
-   <zorder>btn_mymvies</zorder>
-   <zorder>btn_find</zorder>
-   <zorder>btn_profile</zorder>
-   <zorder>btn_popular</zorder>
-   <zorder>stackedWidget</zorder>
   </widget>
  </widget>
  <resources/>
