--- a/UI/mainwindow.ui
+++ b/UI/mainwindow.ui
@@ -825,6 +825,9 @@ padding: 5px;</string>
             <height>121</height>
            </rect>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background-color : transparent;</string>
+          </property>
           <property name="title">
            <string>Gender</string>
           </property>
@@ -836,6 +839,9 @@ padding: 5px;</string>
              <width>112</width>
              <height>26</height>
             </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color : transparent;</string>
            </property>
            <property name="text">
             <string>Male</string>
@@ -850,6 +856,9 @@ padding: 5px;</string>
              <height>26</height>
             </rect>
            </property>
+           <property name="styleSheet">
+            <string notr="true">background-color : transparent;</string>
+           </property>
            <property name="text">
             <string>Female</string>
            </property>
@@ -863,10 +872,32 @@ padding: 5px;</string>
              <height>26</height>
             </rect>
            </property>
+           <property name="styleSheet">
+            <string notr="true">background-color : transparent;</string>
+           </property>
            <property name="text">
             <string>Other</string>
            </property>
           </widget>
+          <widget class="QWidget" name="gridWidget" native="true">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>201</width>
+             <height>121</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color : transparent;
+</string>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_2"/>
+          </widget>
+          <zorder>gridWidget</zorder>
+          <zorder>radio_male</zorder>
+          <zorder>radio_female</zorder>
+          <zorder>radio_other</zorder>
          </widget>
         </widget>
        </item>
